tests/Compilation/negative/test006.juvix
-- Once https://github.com/anoma/juvix/issues/2247 is fixed, this should be moved to positive tests
module test006;

type Box (A : Type) :=
  | box : A → Box A;

x : Box ((B : Type) → B → B) :=
  box {_} λ {C x := x};
